cluster/apps/system-monitor/prometheus-stack/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-alertmanager
  namespace: system-monitor
spec:
  hosts:
  - alertmanager.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: authentik.system-ingress.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-prometheus
  namespace: system-monitor
spec:
  hosts:
  - prometheus.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: authentik.system-ingress.svc.cluster.local
        port:
          number: 80
